# AgentSearchBench

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
asbench/configs/: config.py  generation.yaml  models.yaml
asbench/data/artifacts/: image.csv  video.csv  web.csv
asbench/data/examples/: gaia.jsonl  probes.jsonl  task_query_single_judged_labels.jsonl  task_query_single_labels.jsonl  task_query_single_tasks.jsonl
asbench/generation/: PROBING.md  README.md  inference.py  labels.py  utils.py
asbench/generation/generators/: base.py  context.py  multi_doc.py  rubric.py
asbench/generation/judges/: base.py  consistency_judge.py  multi_judge.py  single_judge.py  task_judge.py
asbench/generation/pipelines/: base.py  task_description.py  task_query_multi.py  task_query_real.py  task_query_single.py
asbench/generation/prompts/: __init__.py  loader.py
asbench/generation/prompts/templates/: judge_base.txt  judge_doc_consistency.txt  judge_multi.txt  judge_task.txt  rubric_evaluate.txt  rubric_generate.txt  task_context.txt  (+5 more)
asbench/generation/responses/: base.py  candidate_selector.py  executor_factory.py  response_generator.py
asbench/retrieval/: base.py  utils.py
asbench/retrieval/models/: bm25.py  hybrid.py  sentence_transformer.py
scripts/: generate.py  load_dataset.py  probe.py
static/css/: index.css  leaderboard.css
static/data/: td_reranking.json  td_retrieval.json  tq_reranking.json  tq_retrieval.json
static/examples/: agent.json  agent_response.json  td.json  tq_multi.json  tq_single.json
static/js/: leaderboard_tables.js
(+2 files in other folders)
